--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">StyleTest</string>
+    <string name="app_name">MyTest</string>
     <string name="add">添加</string>
     <string name="share">分享</string>
+    <string name="open_failed">打开失败</string>
 </resources>
