--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="slide_time">翻页次数</string>
     <string name="slide_start_page">起始页数</string>
     <string name="slide_total_page">总页数</string>
+    <string name="open_wifi">打开Wifi</string>
+    <string name="close_wifi">关闭Wifi</string>
 </resources>
