--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="slide_total_page">总页数</string>
     <string name="open_wifi">打开Wifi</string>
     <string name="close_wifi">关闭Wifi</string>
+    <string name="kreader_test">Kreader自动翻页测试</string>
 </resources>
